--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,56 @@ ul,
 ol {
     list-style: none;
 }
+
+/*MENU*/
+.navbar {
+    background: #00b5cc;
+    font-size: 12px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-weight: bold;
+
+}
+
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+    vertical-align: top;
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
+}
+
+.navbar li a {
+    color: #fff !important;
+}
+
+.navbar-nav li a:hover,
+.navbar-nav li .active a {
+    color: #00b5cc !important;
+    background-color: #fff !important;
+
+}
+
+.navbar-default .navbar-toggle {
+    border-style: none;
+
+}
+
+.icon-bar {
+    background-color: #fff !important;
+}
+
+#linkedin {
+    text-align: center;
+}
+
+
+
+
+
+
 /*---  NEW  ------*/
 .blue
 {
