--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,432 @@ section .logo {
     text-shadow: 1px 1px 1px #000;
 }
 
+/*formation */
+#formation {
+    background: #fff;
+
+}
+
+#formation .heading h2 {
+    color: #00b5cc;
+    
+}
+
+.formation-block {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 30px;
+    background: #ddd;
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    margin-bottom: 20px;
+}
+
+.formation-block ul {
+    list-style: initial;
+    text-align: left;
+}
+
+.formation-block h5 {
+    color: #888;
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+
+.formation-block .glyphicon {
+    font-size: 40px;
+
+}
+
+.formation-block h3 {
+    color: #00b5cc;
+
+
+
+
+}
+
+.formation-block a {
+
+    text-decoration: none;
+}
+
+.formation-block h3:hover {
+    color: #fff;
+    text-decoration: none;
+    list-style: none;
+
+}
+
+.formation-block h4 {
+    margin-bottom: 20px;
+}
+
+.formation-block h6 {
+    text-align: left;
+    margin-bottom: 0px;
+}
+
+.formation-block p {
+    font-weight: bold;
+}
+
+.formation-block .blue-divider {
+    margin-bottom: 20px;
+}
+
+/*EXPERIENCE*/
+#experience {
+    background: #00b5cc;
+}
+
+#experience .heading h2 {
+    color: #fff;
+
+}
+
+.timeline {
+    padding: 30px 10px;
+    position: relative;
+
+}
+
+.timeline:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: "";
+    width: 5px;
+    background-color: #333;
+    left: 50%;
+    margin-left: -2.5px;
+}
+
+.timeline>li {
+    margin-bottom: 20px;
+    position: relative;
+
+}
+
+.timeline>li:after {
+    clear: both;
+
+}
+
+.timeline>li::before,
+.timeline>li:after {
+    content: "";
+    display: table;
+}
+
+.timeline li .timeline-badge {
+    color: #00b5cc;
+    width: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 16px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #ddd;
+    border-radius: 50%;
+}
+
+.timeline-panel-container {
+    width: 50%;
+    float: left;
+}
+
+.timeline-panel-container-inverted {
+    width: 50%;
+    float: right;
+}
+
+.timeline-panel {
+    width: 90%;
+    float: right;
+    margin-right: 40px;
+    border: 1px solid #d4d4d4;
+    border-radius: 7px;
+    padding: 20px 25px;
+    position: relative;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    background: #fff;
+}
+
+.timeline-panel-container-inverted .timeline-panel {
+    float: left;
+    margin-left: 40px;
+}
+
+.timeline-panel:after {
+    position: absolute;
+    top: 27px;
+    right: -14px;
+    display: inline-block;
+    border-top: 14px solid transparent;
+    border-left: 14px solid #fff;
+    border-right: 0 solid #fff;
+    border-bottom: 14px solid transparent;
+    content: "";
+}
+
+.timeline-panel-container-inverted .timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+}
+
+.timeline-heading h3 {
+    margin-top: 5px;
+    font-size: 20px;
+}
+
+.timeline-heading h4 {
+    color: #00b5cc;
+}
+
+
+/*PORTFOLIO*/
+#portfolio {
+    background: #00b5cc;
+}
+
+#portfolio .heading h2 {
+    color: #fff;
+}
+
+.portfolio-block{
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 30px;
+    background: #ddd;
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    margin-bottom: 20px;
+
+}
+.portfolio-block h5{
+    color: black;
+}
+.portfolio-block h4, h5, h6, p{
+    text-align: left;
+}
+.portfolio-block p{
+    margin-left: 15px;
+}
+
+#portfolio .thumbnail img {
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+}
+
+#portfolio .thumbnail img:hover {
+    filter: none;
+    -webkit-filter: none;
+}
+
+
+/*PORTFOLIO WINSURF */
+#hobby {
+    background: #00b5cc;
+}
+
+#hobby h2 {
+    color: #fff;
+}
+
+
+#hobby .thumbnail img {
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+
+}
+
+#hobby .thumbnail img:hover {
+    filter: none;
+    -webkit-filter: none;
+}
+
+#raid {
+    background: #00b5cc;
+}
+
+#raid .heading h2 {
+    color: #fff;
+}
+
+#raid .heading p {
+    color: #fff;
+}
+
+#windsurf {
+    background: #00b5cc;
+}
+
+.heading h2 {
+    color: #fff;
+
+}
+
+.heading p {
+    color: #fff;
+
+}
+
+#carouselButtons {
+    margin-left: 260px;
+    /* position: absolute;*/
+    bottom: 0px;
+}
+
+.construction-block figcaption {
+    padding: 10px 0;
+    font-weight: bold;
+
+}
+
+.construction-block p {
+
+    font-weight: bold;
+    text-align: left;
+}
+
+.construction-block {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 30px;
+    background: #ddd;
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    margin-bottom: 20px;
+}
+
+#construction {
+    background: #00b5cc;
+}
+
+#construction h2 {
+    color: #fff;
+}
+
+.construction-block ul {
+    list-style: initial;
+    text-align: left;
+    font-weight: bold;
+
+}
+
+
+/*CERTIFICATS*/
+#certificats {
+    background-color: #fff;
+}
+
+#certificats h2 {
+    color: #00b5cc;
+}
+
+.carousel-control.left,
+.carousel-control.right {
+    background-image: none;
+    color: #00b5cc;
+}
+
+.carousel-indicators {
+    bottom: 0px;
+
+}
+
+.carousel-indicators li {
+    background-color: #00b5cc;
+}
+
+.carousel-indicators li:active {
+    background-color: #00b5cc;
+}
+
+#myCarousel .item {
+    padding: 40px 30px;
+}
+
+/*contact*/
+#contact {
+    background: #00b5cc;
+}
+
+#contact .heading h2 {
+    color: #fff;
+}
+
+#contact-form {
+    font-size: 20px;
+    color: #fff;
+}
+
+
+.form-control {
+    height: 50px;
+    font-size: 18px;
+}
+
+#contact-form input[type=submit] {
+    margin: 40px auto 0px;
+    display: block;
+}
+
+.comments {
+    font-style: italic;
+    font-size: 18px;
+    color: rgb(217, 17, 17);
+    height: 25px;
+    
+}
+
+#contact-form .thank-you {
+    text-align: center;
+    margin-top: 15px;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+/*FOOTER*/
+FOOTER {
+    background: #333;
+    padding: 20px 0 40px;
+
+}
+
+footer .glyphicon {
+    font-size: 25px;
+    margin: 20px;
+    color: #00b5cc;
+    height: 30px;
+
+}
+
+footer .glyphicon:hover {
+    font-size: 27px;
+
+}
+
+h5 {
+    color: #fff;
+    font-weight: normal;
+}
+
+
+
+
 
 
 /*---  NEW  ------*/
